feat: initial implementation of healthcare scraper with Puppeteer
- Added package.json with necessary dependencies and scripts for development and types.
- Created config.ts for configuration constants including base URL and selectors.
- Implemented index.ts as the entry point for the scraper, handling navigation and data saving.
- Developed scraper.ts to extract help location data from the results page.
- Defined HelpLocation type in types.ts for structured data representation.
- Added utility functions for file operations in fileUtils.ts.
- Implemented humanType function for simulating human-like typing in humanType.ts.
- Created logger.ts for standardized logging with different log levels.
- Added sleep utility in sleep.ts for controlling execution timing.
- Configured TypeScript settings in tsconfig.json for the project.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Scraper for Healthcare.gov local help finder using Puppeteer",
   "main": "src/index.ts",
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,14 @@
   "bugs": {
     "url": "https://github.com/Bakhtiar85/heltcare-help-finder/issues"
   },
-  "homepage": "https://github.com/Bakhtiar85/heltcare-help-finder#readme"
+  "homepage": "https://github.com/Bakhtiar85/heltcare-help-finder#readme",
+  "devDependencies": {
+    "@types/node": "^24.2.1",
+    "@types/puppeteer": "^5.4.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "puppeteer": "^24.16.2"
+  }
 }
