feat: add email composition and sending functionality
- Introduced a modal for composing emails with subject and message fields.
- Implemented functionality to save email templates and send emails to multiple recipients.
- Added nodemailer dependency for handling email sending.
- Updated server-side API to handle email template saving and sending.
- Enhanced the front-end to support loading and displaying email data.
- Improved user interface with responsive design and additional styling.

--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   "homepage": "https://github.com/Bakhtiar85/heltcare-help-finder#readme",
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "@types/nodemailer": "^7.0.0",
     "@types/puppeteer": "^5.4.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "nodemailer": "^7.0.5",
     "puppeteer": "^24.16.2"
   }
 }
